--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,15 +2,31 @@ body {
   background-color: black;
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  object-position: center;
+  
+
   
 }
 
 header {
   color: white;
-  font-weight: normal;
   font-size: 50px;
+  font-weight: normal;
+  padding-top: 30px;
 
 
+}
+
+h1 {
+  color: white;
+  font-size: 42px;
+  font-weight:normal
+}
+
+p {
+  color: grey;
+  font-size: 21px;
+  font-weight: normal;
 }
 
 .link {
@@ -18,3 +34,9 @@ header {
   font-size: 16px;
   color:aquamarine;
 }
+
+
+
+
+
+
