--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,9 +3,6 @@ body {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   object-position: center;
-  
-
-  
 }
 
 header {
@@ -13,8 +10,6 @@ header {
   font-size: 50px;
   font-weight: normal;
   padding-top: 30px;
-
-
 }
 
 h1 {
@@ -35,7 +30,10 @@ p {
   color:aquamarine;
 }
 
-
+h4 {
+  text-align: end;
+  color: grey;
+}
 
 
 
